# herkoole

./: .drone.yml  .gitignore  .pylintrc  Pipfile  README.md  knapsack_example.txt  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml  tsp_example.txt
.github/workflows/: ci.yml
herkoole/: knapsack.ipynb  main.py  tsp.ipynb
herkoole/chromosome/: __init__.py  chromosome.py
herkoole/ea/: __init__.py  evolutionary_algorithm.py  functions.py
herkoole/knapsack/: model.py
herkoole/model/: model.py
herkoole/tsp/: __init__.py  city.py  model.py  test_model.py
