[tool.poetry]
name = "herkoole"
version = "0.1.0"
description = "Knapsack Problem in Python using Genetics Algorithm"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
